--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -7,14 +7,15 @@ body {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
 }
-
-.small-para {
+/* Changed the weight to 1000 for a extra bold */
+.small-para {    
   font-size: 14px;
-  font-weight: 800;
+  font-weight: 1000;
 }
-
-.para {
+/* Changed the weight to 1000 for a extra bold */
+.para.big-para {
   font-size: 22px;
+  font-weight:1000; 
 }
 
 .confirm {
@@ -22,8 +23,9 @@ body {
   color: white;
   font-weight: bold;
 } 
-
+/* add border to button */
 .button {
+  border:2px solid black; 
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
@@ -34,9 +36,18 @@ body {
   font-weight: 800;
   font-size: 14px;
 }
+/* add chained class .text.child with weight 800 */
+.text.child {
+  font-weight:800;
+}
 
 div.text {
   color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
+  font-size: 20px;
+  font-weight: 0;
+}
+/* add green to background and white color to text by ID */
+#confirm-button {
+  color:white;
+  background-color:green; 
 }
