--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,11 @@
 /* Add CSS Styling */
+
+.avatar.proportioned {
+    height:250px;
+    width:250px;
+}
+
+.avatar.distorted {
+    height:500px;
+    width:200px;
+}
