--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -6,6 +6,10 @@
 }
 
 .box {
+  /* add margin */
+  margin-left:150px;
+  margin-top:100px;
+  /* add margin */
   background: palevioletred;
   font-weight: bold;
   text-align: center;
