--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -7,13 +7,18 @@
 
 .box {
   /* add margin */
-  margin-left:150px;
-  margin-top:100px;
-  /* add margin */
+  /* margin-left:150px;
+  margin-top:100px; */
   background: palevioletred;
   font-weight: bold;
   text-align: center;
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+}
+
+.container {
+  display:flex;
+  align-items: center;
+  justify-content: center;
 }
