--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,7 +6,7 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 18px auto;
 }
 
 .title {
@@ -15,6 +15,7 @@ body {
 
 .content {
   background: #e3f4ff;
+  padding:5px;
 }
 
 .button-container {
@@ -22,6 +23,35 @@ body {
 }
 
 button {
+  padding:5px;
   background: white;
   border: 1px solid #eee;
+}
+
+/* Solutions */
+
+.card {
+  padding:8px;
+}
+
+.title {
+  margin-top:0;
+  margin-bottom:8px;
+  padding: 8px;
+}
+
+.content {
+  margin-bottom:8px;
+  padding: 14px 8px;
+} 
+
+.button-container {
+  text-align: center;
+  padding: 10px;
+}
+
+button {
+  display:block;
+  margin:0 auto;
+  padding:10px 20px;
 }
