--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,3 +1,4 @@
+
 .header  {
   font-family: monospace;
   background: papayawhip;
@@ -22,4 +23,26 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+/* Solutions here */
+
+/* * {
+  padding:5px;
+  align-items:center;
+  justify-content:center;
+} */
+
+.header {
+  display:flex;
+  padding:10px;
+  align-items:center;
+  justify-content:space-between;
+}
+
+ul {
+  display:flex;
+  margin:0;
+  padding:2px;
+  gap:5px;
 }
